# shortcut-cli

./: .gitignore  Makefile  README.md  config-example.yaml  pyproject.toml  setup.cfg
src/shortcut_cli/: api_client.py  cli.py  importer.py  importer_main.py  shortcut.py  shortcut_client.py
src/shortcut_importer/: __init__.py  __main__.py  importer.py
src/shortcut_importer/services/: githubzenhub.py  shortcut.py
