[metadata]
name = shortcut_importer
description = Imports issues into Shortcut
long_description = file: README.md
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    coloredlogs
    pygithub
    pyyaml
    pyzenhub
    requests
    requests_cache

[options.package_data]
* = *.gz, *.json, *.yaml

[options.entry_points]
console_scripts =
    shortcut-importer = shortcut_importer.__main__:main

[options.extras_require]
dev =
    bandit
    black
    build
    flake9
    isort
    ipython
    mypy
    pylint
    pytest
    pytest-cov
    tox

[options.packages.find]
where = src
